@@ -1,0 +1,19 @@
+% title '수선';
+% layout 'default', jses => ['repair.js'];
+
+<div id="repair">
+  % while (my $order = $orders->next) {
+    % my $user      = $order->user;
+    % my $user_info = $user->user_info;
+    % my $gender    = $user_info->gender;
+    <div>
+      <h2><i class="fa fa-<%= $gender%>"></i> <%= $user->name %></h2>
+      <p>
+        <abbr class="timeago" 
+              title="<%= $order->update_date->ymd %>T<%= $order->update_date->hms%>Z">
+          <%= $order->update_date %>
+        </abbr>
+      </p>
+    </div>
+  % }
+</div>
