@@ -1,3 +1,5 @@
+  - Add route 'GET /repair'
+
 v0.3.8    Wed, 09 Sep 2015 17:44:07 +0900
   - #bestfit-alert .bestfit style 강조
 
